--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -10,7 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.5",
+    "angular-animate": "^1.5.5",
+    "angular-touch": "^1.5.5",
+    "angular-ui-bootstrap": "^1.3.2",
     "bootstrap": "^3.3.6",
+    "bootstrap-ui-datetime-picker": "^2.3.1",
     "jquery": "^2.2.3",
     "moment": "^2.13.0"
   },
