--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -19,6 +19,9 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
+    "eslint": "^2.10.2",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.0.1",
     "lodash": "^4.11.1"
   }
 }
