--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "t=ToDoCallsApp",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Grigorii Nakonechnyi",
+  "author": "Grygorii Nakonechnyi",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.5.5",
     "angular-animate": "^1.5.5",
+    "angular-mocks": "^1.5.6",
+    "angular-resource": "^1.5.6",
+    "angular-route": "^1.5.6",
     "angular-touch": "^1.5.5",
     "angular-ui-bootstrap": "^1.3.2",
     "bootstrap": "^3.3.6",
@@ -22,6 +22,26 @@
     "eslint": "^2.10.2",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.0.1",
-    "lodash": "^4.11.1"
+    "http-server": "^0.9.0",
+    "jasmine": "^2.4.1",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "lodash": "^4.11.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "protractor": "^3.3.0"
+  },
+  "scripts": {
+    "prestart": "npm install",
+    "start": "http-server -a localhost -p 8000",
+    "pretest": "npm install",
+    "test": "karma start karma.conf.js",
+    "test-single-run": "karma start karma.conf.js --single-run",
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor e2e-tests/protractor.conf.js"
   }
 }
