--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -22,6 +22,11 @@
     "eslint": "^2.10.2",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.0.1",
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-if": "^2.0.1",
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^3.1.0",
     "http-server": "^0.9.0",
     "jasmine": "^2.4.1",
     "karma": "^0.13.22",
