--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -19,12 +19,18 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
+    "add-stream": "^1.0.0",
+    "del": "^2.2.1",
     "eslint": "^2.10.2",
     "eslint-config-angular": "^0.5.0",
     "eslint-plugin-angular": "^1.0.1",
     "gulp": "^3.9.1",
+    "gulp-angular-templatecache": "^2.0.0",
+    "gulp-concat": "^2.6.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.1",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
     "http-server": "^0.9.0",
