--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -27,6 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-angular-templatecache": "^2.0.0",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^4.1.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.1",
     "gulp-ng-annotate": "^2.0.0",
