--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app_angular",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "t=ToDoCallsApp",
   "main": "index.js",
   "author": "Grygorii Nakonechnyi",
@@ -46,14 +46,14 @@
     "protractor": "^3.3.0"
   },
   "scripts": {
-    "prestart": "npm install",
+    // "prestart": "npm install",
     "start": "http-server -a localhost -p 8000",
-    "pretest": "npm install",
+    // "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run",
-    "preupdate-webdriver": "npm install",
+    // "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor ./js/e2e/protractor.conf.js"
+    "protractor": "protractor app/js/e2e/protractor.conf.js"
   }
 }
