--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ node_js:
   - "4.2.4"
 before_script:
   - npm install -g gulp
+after_success: 
+  - npm run-script coveralls  
 script:
-  - npm run-script test-single-run
+  - npm run-script test-with-istanbul
