--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "add-stream": "^1.0.0",
+    "coveralls": "^2.11.12",
     "del": "^2.2.1",
     "eslint": "^2.10.2",
     "eslint-config-angular": "^0.5.0",
@@ -35,6 +36,7 @@
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
     "http-server": "^0.9.0",
+    "istanbul": "^0.4.4",
     "jasmine": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
@@ -49,6 +51,8 @@
     "start": "http-server -a localhost -p 8000",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run",
+    "test-with-istanbul": "istanbul cover ./node_modules/jasmine/bin/jasmine.js",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "update-webdriver": "webdriver-manager update & webdriver-manager start",
     "preprotractor": "npm run update-webdriver",
     "protractor": "protractor e2e/protractor.conf.js"
