--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -38,6 +38,7 @@
     "http-server": "^0.9.0",
     "istanbul": "^0.4.4",
     "jasmine": "^2.4.1",
+    "jasmine-node": "^1.14.5",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
@@ -51,7 +52,7 @@
     "start": "http-server -a localhost -p 8000",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run",
-    "test-with-istanbul": "istanbul cover ./node_modules/jasmine/bin/jasmine.js",
+    "test-with-istanbul": "./node_modules/istanbul/lib/cli.js cover ./node_modules/jasmine-node/bin/jasmine-node --captureExceptions app/js/**/*.spec.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "update-webdriver": "webdriver-manager update & webdriver-manager start",
     "preprotractor": "npm run update-webdriver",
