update karma config for support coverage

--- a/app_angular/package.json
+++ b/app_angular/package.json
@@ -41,6 +41,8 @@
     "jasmine-node": "^1.14.5",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.1.1",
+    "karma-coveralls": "^1.1.2",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
@@ -52,7 +54,7 @@
     "start": "http-server -a localhost -p 8000",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run",
-    "test-with-istanbul": "./node_modules/istanbul/lib/cli.js cover ./node_modules/jasmine-node/bin/jasmine-node --captureExceptions app/js/**/*.spec.js",
+    "test-with-istanbul": "./node_modules/istanbul/lib/cli.js cover ./node_modules/jasmine-node/bin/jasmine-node --captureExceptions app/js/controllers/main.spec.js",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "update-webdriver": "webdriver-manager update & webdriver-manager start",
     "preprotractor": "npm run update-webdriver",
