--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
 after_success: 
   - npm run-script coveralls
 script:
-  - npm run-script test-with-istanbul
+  - npm run-script test-single-run
